grammar.js
    source_file: $ =>
      choice($.program_definition, $.copybook_definition),

    program_definition: $ =>
      seq(
        $.identification_division,
        optional($.environment_division),
        optional($.data_division),
        optional($.procedure_division),
        optional(seq(ci('END'), ci('PROGRAM'), $._name_word, optional('.'))),
      ),

    // Copybooks: just data descriptions, no divisions required
    copybook_definition: $ =>
      repeat1(choice(
        $.data_description, $.copy_statement, seq($.exec_sql_statement, optional('.')),
        $.section, $.paragraph, $.sentence,
      )),

    // ========================================================================
    // IDENTIFICATION DIVISION
    // ========================================================================
    identification_division: $ =>
      seq(
        ci('IDENTIFICATION'),
        ci('DIVISION'),
        '.',
        $.program_id_paragraph,
        repeat(
          choice(
            $.author_paragraph,
            $.date_written_paragraph,
            $.date_compiled_paragraph,
            $.installation_paragraph,
            $.security_paragraph,
            $.remarks_paragraph,
          ),
        ),
      ),

    program_id_paragraph: $ =>
      seq(ci('PROGRAM-ID'), optional('.'), $._name_word, optional('.')),

    author_paragraph: $ =>
      seq(ci('AUTHOR'), '.', optional($.comment_entry)),

    date_written_paragraph: $ =>
      seq(ci('DATE-WRITTEN'), '.', optional($.comment_entry)),

    environment_division: $ =>
      seq(
        ci('ENVIRONMENT'),
        ci('DIVISION'),
        '.',
        optional($.configuration_section),
        optional($.input_output_section),
      ),

    configuration_section: $ =>
      seq(
        ci('CONFIGURATION'),
        ci('SECTION'),
        '.',
        repeat(choice(
          $.source_computer_paragraph,
          $.object_computer_paragraph,
          $.special_names_paragraph,
          $.repository_paragraph,
        )),
      ),

    source_computer_paragraph: $ =>
      seq(ci('SOURCE-COMPUTER'), '.', repeat($._env_word), optional('.')),

    _env_word: $ =>
      choice($.WORD, $.number_literal, $.string_literal),

    input_output_section: $ =>
      seq(
        ci('INPUT-OUTPUT'),
        ci('SECTION'),
        '.',
        optional($.file_control_paragraph),
        optional($.io_control_paragraph),
      ),

    file_control_paragraph: $ =>
      seq(ci('FILE-CONTROL'), '.', repeat($.select_statement)),

    select_statement: $ =>
      seq(
        ci('SELECT'),
        optional(ci('OPTIONAL')),
        $._name_word,
        ci('ASSIGN'),
        optional(ci('TO')),
        $._name_word,
        repeat(choice(
          seq(ci('ORGANIZATION'), optional(ci('IS')),
            choice(ci('INDEXED'), ci('SEQUENTIAL'), ci('RELATIVE'), seq(ci('LINE'), ci('SEQUENTIAL')))),
          seq(ci('ACCESS'), optional(ci('MODE')), optional(ci('IS')),
            choice(ci('SEQUENTIAL'), ci('RANDOM'), ci('DYNAMIC'))),
          seq(ci('RECORD'), optional(ci('KEY')), optional(ci('IS')), $._name_word),
          seq(ci('ALTERNATE'), ci('RECORD'), optional(ci('KEY')), optional(ci('IS')),
            $._name_word, optional(seq(ci('WITH'), ci('DUPLICATES')))),
          seq(ci('FILE'), ci('STATUS'), optional(ci('IS')), $._name_word),
          seq(ci('RELATIVE'), optional(ci('KEY')), optional(ci('IS')), $._name_word),
        )),
        '.',
      ),

    // ========================================================================
    // DATA DIVISION
    // ========================================================================
    data_division: $ =>
      seq(
        ci('DATA'),
        ci('DIVISION'),
        '.',
        repeat(choice(
          $.file_section,
          $.working_storage_section,
          $.linkage_section,
          $.local_storage_section,
        )),
      ),

    working_storage_section: $ =>
      seq(
        ci('WORKING-STORAGE'),
        ci('SECTION'),
        '.',
        repeat(choice($.data_description, $.copy_statement, seq($.exec_sql_statement, optional('.')))),
      ),

    data_description: $ =>
      seq(
        $.level_number,
        optional($.entry_name),
        repeat($._data_clause),
        '.',
      ),

    level_number: $ => /[0-9]{1,2}/,

    entry_name: $ => choice($._name_word, ci('FILLER')),

    _data_clause: $ =>
      choice(
        $.picture_clause,
        $.usage_clause,
        $.value_clause,
        $.redefines_clause,
        $.occurs_clause,
        $.sign_clause,
        $.justified_clause,
        $.blank_when_zero_clause,
        $.synchronized_clause,
        $.renames_clause,
        $.external_clause,
        $.global_clause,
      ),

    picture_clause: $ =>
      seq(choice(ci('PIC'), ci('PICTURE')), optional(ci('IS')), $.pic_string),

    value_clause: $ =>
      seq(
        choice(ci('VALUE'), ci('VALUES')),
        optional(ci('IS')),
        optional(ci('ARE')),
        $._value_item,
        repeat(seq(optional(','), optional(choice(ci('THRU'), ci('THROUGH'))), $._value_item)),
      ),

    _value_item: $ =>
      choice(
        $._literal,
        $._figurative_constant,
        seq(ci('ALL'), $._literal),
      ),

    occurs_clause: $ =>
      seq(
        ci('OCCURS'),
        $.number_literal,
        optional(seq(ci('TO'), $.number_literal)),
        optional(ci('TIMES')),
        optional(seq(ci('DEPENDING'), optional(ci('ON')), $.identifier)),
        optional(seq(ci('INDEXED'), optional(ci('BY')), repeat1($._name_word))),
      ),

    copy_statement: $ =>
      seq(
        ci('COPY'),
        choice($._name_word, $.string_literal),
        optional(seq(ci('OF'), choice($._name_word, $.string_literal))),
        optional(seq(ci('IN'), choice($._name_word, $.string_literal))),
        optional($.replacing_clause),
        '.',
      ),

    replacing_clause: $ =>
      seq(
        ci('REPLACING'),
        repeat1(seq($._replacing_operand, ci('BY'), $._replacing_operand)),
      ),

    _replacing_operand: $ =>
      choice($.pseudo_text, $._name_word, $._literal),

    pseudo_text: $ =>
      seq('==', repeat(choice($.WORD, /[^=]+/)), '=='),

    // ========================================================================
    // PROCEDURE DIVISION
    // ========================================================================
    procedure_division: $ =>
      seq(
        ci('PROCEDURE'),
        ci('DIVISION'),
        optional($.using_clause),
        optional($.returning_clause),
        '.',
        repeat(choice($.section, $.paragraph, $.sentence)),
      ),

    section: $ =>
      prec.left(seq($._name_word, ci('SECTION'), optional($.number_literal), '.',
        repeat(choice($.paragraph, $.sentence)))),

    paragraph: $ =>
      prec.left(seq($._name_word, '.', repeat($.sentence))),

    sentence: $ => seq(repeat1($._statement), '.'),

    // ========================================================================
    // STATEMENTS
    // ========================================================================
    _statement: $ =>
      choice(
        // Control flow
        $.if_statement,
        $.evaluate_statement,
        $.perform_statement,
        $.perform_inline,
        $.go_to_statement,
        $.goback_statement,
        $.stop_statement,
        $.exit_statement,
        $.continue_statement,
        $.next_sentence_statement,

        // Data movement
        $.move_statement,
        $.initialize_statement,
        $.set_statement,
        $.compute_statement,
        $.add_statement,
        $.subtract_statement,
        $.multiply_statement,
        $.divide_statement,

        // I/O
        $.display_statement,
        $.accept_statement,
        $.open_statement,
        $.close_statement,
        $.read_statement,
        $.write_statement,
        $.rewrite_statement,
        $.delete_statement,

        // String
        $.string_statement,
        $.unstring_statement,
        $.inspect_statement,

        // Table
        $.search_statement,
        $.sort_statement,
        $.merge_statement,
        $.release_statement,
        $.return_statement,

        // Program flow
        $.call_statement,
        $.alter_statement,

        // EXEC
        $.exec_cics_statement,
        $.exec_sql_statement,

        // COPY in procedure division
        $.copy_statement,
      ),

    // --- IF / EVALUATE: self-terminating with END-xxx ---
    if_statement: $ =>
      seq(
        ci('IF'),
        $._condition,
        optional(ci('THEN')),
        repeat($._statement),
        optional(seq(ci('ELSE'), repeat($._statement))),
        ci('END-IF'),
      ),

    evaluate_statement: $ =>
      seq(
        ci('EVALUATE'),
        $._evaluate_subject,
        repeat(seq(ci('ALSO'), $._evaluate_subject)),
        repeat1($.when_clause),
        optional(seq(ci('WHEN'), ci('OTHER'), repeat($._statement))),
        ci('END-EVALUATE'),
      ),

    _evaluate_subject: $ =>
      choice(ci('TRUE'), ci('FALSE'), $._expression),

    when_clause: $ =>
      prec.left(seq(
        ci('WHEN'),
        $._when_condition,
        repeat(seq(ci('ALSO'), $._when_condition)),
        repeat($._statement),
      )),

    _when_condition: $ =>
      choice(
        ci('ANY'),
        $._condition,
        seq($._expression, choice(ci('THRU'), ci('THROUGH')), $._expression),
      ),

    stop_statement: $ =>
      prec.left(seq(ci('STOP'), choice(ci('RUN'), $._literal))),

    exit_statement: $ =>
      prec.left(seq(ci('EXIT'), optional(choice(
        ci('PROGRAM'), ci('PARAGRAPH'), ci('SECTION'), ci('PERFORM'), ci('CYCLE'))))),

    move_statement: $ =>
      prec.left(seq(
        ci('MOVE'),
        optional(ci('CORRESPONDING')),
        $._expression,
        ci('TO'),
        repeat1($._expression),
      )),

    display_statement: $ =>
      prec.left(seq(
        ci('DISPLAY'),
        repeat1($._expression),
        optional(seq(ci('UPON'), $._name_word)),
        optional(seq(ci('WITH'), ci('NO'), ci('ADVANCING'))),
      )),

    exec_cics_statement: $ =>
      seq(ci('EXEC'), ci('CICS'), $._cics_command, ci('END-EXEC')),

    _cics_command: $ =>
      choice(
        $.cics_send,
        $.cics_send_text,
        $.cics_receive,
        $.cics_return,
        $.cics_read,
        $.cics_write,
        $.cics_rewrite,
        $.cics_delete,
        $.cics_startbr,
        $.cics_readnext,
        $.cics_readprev,
        $.cics_endbr,
        $.cics_resetbr,
        $.cics_xctl,
        $.cics_link,
        $.cics_assign,
        $.cics_handle_abend,
        $.cics_handle_condition,
        $.cics_handle_aid,
        $.cics_abend,
        $.cics_syncpoint,
        $.cics_asktime,
        $.cics_formattime,
        $.cics_retrieve,
        $.cics_writeq,
        $.cics_readq,
        $.cics_deleteq,
        $.cics_getmain,
        $.cics_freemain,
        $.cics_generic,
      ),

    cics_send: $ =>
      seq(ci('SEND'), repeat1($.cics_option)),

    cics_return: $ =>
      seq(ci('RETURN'), repeat($.cics_option)),

    cics_read: $ =>
      seq(ci('READ'), repeat1($.cics_option)),

    cics_option: $ =>
      choice(
        seq($.WORD, '(', $._cics_value, ')'),
        $.WORD,
      ),

    _cics_value: $ =>
      repeat1(choice(
        $.WORD,
        $.numeric_name,
        $.string_literal,
        $.number_literal,
        $.length_of_expression,
        seq('(', $._cics_value, ')'),
        '+', '-',
      )),

    exec_sql_statement: $ =>
      seq(ci('EXEC'), ci('SQL'), $._sql_body, ci('END-EXEC')),

    _sql_body: $ =>
      choice(
        $.sql_include,
        $.sql_declare_cursor,
        $.sql_select,
        $.sql_insert,
        $.sql_update,
        $.sql_delete_sql,
        $.sql_open,
        $.sql_close,
        $.sql_fetch,
        $.sql_whenever,
        $.sql_generic,
      ),

    sql_include: $ =>
      seq(ci('INCLUDE'), repeat1($._sql_token)),

    sql_select: $ =>
      seq(ci('SELECT'), repeat1($._sql_token)),

    _sql_token: $ =>
      choice(
        $.sql_host_variable,
        $.WORD,
        $.numeric_name,
        $.string_literal,
        $.number_literal,
        '(', ')', '.', ',', '=', '<', '>', '<=', '>=', '<>',
        '+', '-', '*', '/',
      ),

    sql_host_variable: $ =>
      seq(':', $.WORD),

    // ========================================================================
    // EXPRESSIONS & CONDITIONS
    // ========================================================================
    _expression: $ =>
      choice(
        $.identifier,
        $._literal,
        $._figurative_constant,
        $.function_call,
        $.address_of,
        $.length_of,
        $._parenthesized_expression,
        $._arithmetic_expression,
      ),

    length_of: $ =>
      prec(5, seq(ci('LENGTH'), ci('OF'), $._expression)),

    identifier: $ =>
      prec.right(choice(
        seq($.qualified_identifier, $.subscript, $.subscript),
        seq($._name_word, $.subscript, $.subscript),
        seq($.qualified_identifier, $.subscript),
        seq($._name_word, $.subscript),
        $.qualified_identifier,
        $._name_word,
      )),

    qualified_identifier: $ =>
      prec.left(seq(
        $._name_word,
        repeat1(seq(choice(ci('OF'), ci('IN')), $._name_word)),
      )),

    // Unified subscript/reference-modification rule.
    // (a) or (a, b) = subscript; (a:b) or (a:) = reference modification.
    subscript: $ =>
      seq('(', $._expression,
        optional(choice(
          repeat1(seq(',', $._expression)),  // multi-subscript: (a, b, ...)
          seq(':', optional($._expression)), // reference modification: (a:b)
        )),
      ')'),

    function_call: $ =>
      prec.left(5, seq(
        ci('FUNCTION'),
        $.WORD,
        optional(choice(
          seq('(', $._expression, ':', optional($._expression), ')'),
          seq('(', optional(seq($._expression, repeat(seq(',', $._expression)))), ')'),
        )),
      )),

    _condition: $ =>
      choice(
        $._simple_condition,
        prec.left(1, seq($._condition, ci('AND'), $._condition)),
        prec.left(0, seq($._condition, ci('OR'), $._condition)),
        prec(2, seq(ci('NOT'), $._condition)),
        prec(3, seq('(', $._condition, ')')),
      ),

    _literal: $ =>
      choice($.string_literal, $.number_literal),

    string_literal: $ =>
      choice(
        $._string_literal_ext,
        /[Xx]'[0-9A-Fa-f]*'/,
        /[Xx]"[0-9A-Fa-f]*"/,
        /[Nn]'[^']*'/,
        /[Nn]"[^"]*"/,
      ),

    number_literal: $ =>
      /[+-]?[0-9]+(\.[0-9]+)?/,

    _name_word: $ => choice($.WORD, $.numeric_name),

    numeric_name: $ => /[0-9]+[a-zA-Z_-][a-zA-Z0-9_-]*/,
  },
});
